# orbslam3-odometry

./: .gitignore  .pre-commit-config.yaml  EuRoC_odom_1  LICENSE  README.md  README_celina  esegui_all.sh  full_documentation.md  s.sh  setup.sh
orbslam3_odometry/: CMakeLists.txt  package.xml
orbslam3_odometry/cmake/: FindORB_SLAM3.cmake
orbslam3_odometry/config/: aquarium_nano_stereo.yaml  orbslam3_odometry.yaml  param_tuning_output_stats.py
orbslam3_odometry/config/calibrations/clyde/in_water/: left_intrinsic_params.yaml  right_intrinsic_params.yaml  right_stereo_params.yaml
orbslam3_odometry/from_matlab_to_opencv/: from_matlab_to_opencv.m
orbslam3_odometry/include/orbslam3_odometry/: main_node.hpp  utility.hpp
orbslam3_odometry/launch/: inject_camera_info.py  orbslam3_odometry_launch.py  stereo.launch.py
orbslam3_odometry/src/: main_node.cpp
orbslam3_odometry/src/monocular/: monocular.cpp  monocular.hpp  monocular_node.cpp
orbslam3_odometry/src/stereo/: just_check_stereo_calibration.cpp  stereo copy.cpp  stereo.cpp  stereo.hpp  stereo_node.cpp  stereo_rectification.cpp  stereo_rectification.h  stereo_rectification.hpp
orbslam_helpers/: package.xml  setup.cfg  setup.py
orbslam_helpers/orbslam_helpers/: camera_info_injector.py
src/orbslam3_odometry/: CMakeLists.txt  package.xml
src/orbslam3_odometry/cmake/: FindORB_SLAM3.cmake
src/orbslam3_odometry/config/: TUM-VI.yaml  TUM1.yaml  UWslam_rect.yaml  aquarium_nano_stereo.yaml  fisheye.yaml  orbslam3_odometry.yaml  our.yaml
src/orbslam3_odometry/config/calibrations/clyde/in_water/: left_stereo_params.yaml
src/orbslam3_odometry/include/orbslam3_odometry/: utility.hpp
src/orbslam3_odometry/launch/: orbslam3_odometry_launch.py
src/orbslam3_odometry/src/: main_node.cpp
src/orbslam3_odometry/src/monocular/: monocular.hpp
src/orbslam3_odometry/src/stereo/: just_check_stereo_calibration.cpp  stereo.cpp  stereo.hpp
